backgroundcolor for landingpage and resultpage to avoid default black, updated z-index for the blurry background of the header of the result

--- a/src/components/Landingpage.css
+++ b/src/components/Landingpage.css
@@ -5,4 +5,5 @@
   flex-direction: column;
   align-items: center;
   gap: 48px;
+  background-color: var(--color-white);
 }
