--- a/src/components/SelectedArtist.css
+++ b/src/components/SelectedArtist.css
@@ -19,7 +19,7 @@
   background-size: cover;
   background-position: center;
   filter: blur(10px);
-  z-index: -1;
+  z-index: 1;
   background-color: rgba(51, 51, 51, 0.5);
 }
 
